feat: melhorar segurança e configuração
- Adicionar .gitignore com exclusão de arquivos sensíveis
- Migrar Constants para usar variáveis de ambiente
- Atualizar arquivos .env.example com configurações necessárias
- Adicionar .github/ ao gitignore para manter documentação local

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,2 +1,6 @@
-GH_CLIENT_ID=
-GH_CLIENT_SECRET=
+# API Configuration
+NEXT_PUBLIC_API_URL=http://localhost:5000
+NEXT_PUBLIC_GITHUB_CLIENT_ID=your_github_client_id
+
+# Environment
+NODE_ENV=development
