--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,20 @@
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_NAME=
-GH_CLIENT_ID=
-GH_CLIENT_SECRET=
+# Database Configuration
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
+DB_HOST=localhost
+DB_NAME=your_db_name
+
+# GitHub OAuth
+GH_CLIENT_ID=your_github_client_id
+GH_CLIENT_SECRET=your_github_client_secret
+
+# Flask Configuration
+FLASK_ENV=development
+SECRET_KEY=your-secret-key-here
+
+# Optional - Redis for caching
+REDIS_URL=redis://localhost:6379
+
+# Logging
+LOG_LEVEL=INFO
+LOG_FILE=logs/app.log
