--- a/app/package.json
+++ b/app/package.json
@@ -13,8 +13,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "axios": "^0.26.1",
-    "next": "12.1.4",
+    "axios": "^1.6.0",
+    "next": "^13.5.6",
     "plotly.js": "^1.44.4",
     "react": "18.0.0",
     "react-activity": "^2.1.3",
@@ -28,7 +28,7 @@
     "@types/react-plotly.js": "^2.5.0",
     "autoprefixer": "^10.4.12",
     "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4",
+    "eslint-config-next": "^13.5.6",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.3"
